--- a/layouts/blog-cn/list.html
+++ b/layouts/blog-cn/list.html
@@ -12,28 +12,30 @@
             <h1 class="title">热门标签 <a class="rss fa fa-rss" href="/rss/feed-cn.xml" title="RSS Feed"></a></h1>
             <a href="/bloglist-zh.html" class="all">ALL ({{ len $posts }})</a>
             <ul class="tag-list f-cb">
-                <!-- Get all posts-->
-              <!-- loop all tags that you've used -->
-              {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-                <!-- (re)set the counter to 0 -->
-                {{ $.Scratch.Set "tagCounter" 0 }}
-                <!-- increment counter if post contains the current tag-->
-                <!-- tag name: {{ $name }}, {{$taxonomy}} -->
-                {{ range $posts}}
-                <!-- Post tags: {{.Params.tags}} -->
-                  {{ if in .Params.tags $name }}
-                    {{ $.Scratch.Add "tagCounter" 1 }}
-                  {{ end }}
-                {{ end }}
-                <!-- {{ $name }} -->
-                    {{ if $.Scratch.Get "tagCounter" }}
-                    <!-- hide class for li, if less then 2 -->
-                      <li class="">
-                        <a href="{{ $name }}" class="tag">
-                          {{ $name }} ({{ $.Scratch.Get "tagCounter" }})</a>
-                      </li>
+                {{/*
+                    <!-- Get all posts-->
+                  <!-- loop all tags that you've used -->
+                  <!-- {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
+                    <!-- (re)set the counter to 0 -->
+                    {{ $.Scratch.Set "tagCounter" 0 }}
+                    <!-- increment counter if post contains the current tag-->
+                    <!-- tag name: {{ $name }}, {{$taxonomy}} -->
+                    {{ range $posts}}
+                    <!-- Post tags: {{.Params.tags}} -->
+                      {{ if in .Params.tags $name }}
+                        {{ $.Scratch.Add "tagCounter" 1 }}
+                      {{ end }}
                     {{ end }}
-              {{end}}
+                    <!-- {{ $name }} -->
+                        {{ if $.Scratch.Get "tagCounter" }}
+                        <!-- hide class for li, if less then 2 -->
+                          <li class="">
+                            <a href="{{ $name }}" class="tag">
+                              {{ $name }} ({{ $.Scratch.Get "tagCounter" }})</a>
+                          </li>
+                        {{ end }}
+                  {{end}} -->
+                 */}}
             </ul>
         </div>
         <div class="col-md-8 list">
@@ -48,17 +50,22 @@
                         {{ .Date.Format "2006-01-02" }}
                     </li>
                     <li class="meta-item"><svg enable-background="new 0 0 139 139" viewBox="0 0 139 139" xmlns="http://www.w3.org/2000/svg"><circle cx="69.5" cy="52.2" fill="none" r="27.4" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/><path d="m69.2 124.6c0 0 22 1.8 40.2-17.9 0 0 1.5-19.2-12.7-24.9l-9.9-4.7c0 0-1.1-1.9-.7-3.4" fill="none" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/><path d="m70 124.6c0 0-22 1.8-40.2-17.9 0 0-1.5-19.2 12.7-24.9l9.9-4.7c0 0 1.1-1.9.7-3.4" fill="none" stroke="#000103" stroke-miterlimit="10" stroke-width="6"/></svg>
-                      <!-- {{ range .Params.author }}
-                        <li><a href="{{ "/authors/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
-                      {{ end }} -->
-                      <!-- {{ range .Params.author }} {{ . }}  {{ end }} -->
+                        {{/*
+                            <!-- {{ range .Params.author }}
+                              <li><a href="{{ "/authors/" | relLangURL }}{{ . | urlize }}">{{ . }}</a> </li>
+                            {{ end }} -->
+                            <!-- {{ range .Params.author }} {{ . }}  {{ end }} -->
+
+                        */}}
                       {{ .Params.author }}
                     </li>
                     <li class="meta-item">
                       <ul id="tags">
-                        {{ range .Params.tags }}
-                          <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-                        {{ end }}
+                          {{/*
+                              {{ range .Params.tags }}
+                                <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
+                              {{ end }}
+                         */}}
                       </ul>
                     </li>
                 </ul>
