--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -7,7 +7,13 @@
 {{ define "main" }}
 <div class="container">
 <div class="row">
-{{ partial "zh.doc.nav.html" .}}
+  <div class="col-md-4 nav nav-tree" id="st-tree">
+    <h1 class="title"> Document </h1>
+    <div class="st_tree">
+      {{ partial "tree-nav.html" .Site.Data.docs_cn_toc }}
+     </div>
+  </div>
+
 <div class="col-md-8 list">
 <div class="item">
 <div class="content">{{ .Content }}</div>
