--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -1,6 +1,6 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "blog"}}
-{{$.Scratch.Set "data_i18_zh" true }}
+{{$.Scratch.Set "data_i18_cn" true }}
 <link href="/css/doc.css" rel="stylesheet">
 <link href="/css/blog.css" rel="stylesheet">
 {{ end }}
