--- a/layouts/partials/tree-nav.html
+++ b/layouts/partials/tree-nav.html
@@ -1,7 +1,8 @@
 <ul>
   {{range .}}
+  <!-- {{.link}} -->
     {{ if isset . "children" }}
-      <li><a href="#">{{ .name }}</a></li>
+      <li><a href="#" class="active">{{ .name }}</a></li>
         {{ partial "tree-nav.html" .children }}
     {{else}}
     <li>
