--- a/layouts/recruit-cn/single.html
+++ b/layouts/recruit-cn/single.html
@@ -1,6 +1,6 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "about"}}
-{{$.Scratch.Set "data_i18_zh" true }}
+{{$.Scratch.Set "data_i18_cn" true }}
 <link href="/css/recruit.css" rel="stylesheet">
 <style type="text/css" media="screen">
 {{ end }}
