--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -1,6 +1,6 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "docs"}}
-{{$.Scratch.Set "data_i18_zh" true }}
+{{$.Scratch.Set "data_i18_cn" true }}
 <link href="/css/doc.css" rel="stylesheet">
 {{ end }}
 
@@ -8,7 +8,7 @@
 <div class="container">
 <div class="row">
   <div class="col-md-4 nav nav-tree" id="st-tree">
-    <h1 class="title"> Document </h1>
+    <h1 class="title"> 文档 </h1>
     <div class="st_tree">
       {{ partial "tree-nav.html" .Site.Data.docs_cn_toc }}
      </div>
@@ -16,7 +16,9 @@
 
 <div class="col-md-8 list">
 <div class="item">
-<div class="content">{{ .Content }}</div>
+<div class="content">
+  {{ .Content }}
+</div>
 
 <div class="draw">
 <img src="https://download.pingcap.com/images/docs-simple.png" width="100%">
