--- a/layouts/meetup/list.html
+++ b/layouts/meetup/list.html
@@ -1,6 +1,6 @@
 {{ define "headcss" }}
 {{$.Scratch.Set "nav_active" "meetup"}}
-{{$.Scratch.Set "data_i18_zh" true }}
+{{$.Scratch.Set "data_i18_cn" true }}
 <link href="/css/meetup.css" rel="stylesheet">
 <style type="text/css" media="screen">
 .page > header {
