--- a/layouts/page/index-cn.html
+++ b/layouts/page/index-cn.html
@@ -1,5 +1,5 @@
 {{ define "headcss" }}
-{{$.Scratch.Set "data_i18_zh" true }}
+{{$.Scratch.Set "data_i18_cn" true }}
 <link href="/css/index.css" rel="stylesheet">
 {{ end }}
 
