--- a/layouts/partials/footer-cn.html
+++ b/layouts/partials/footer-cn.html
@@ -1,4 +1,4 @@
-<section class="footer" id="footer">
+<section class="footer">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-5">
@@ -79,7 +79,7 @@
                 <div id="js_qr_code" class="qr_code_outer f-hide">
                     <div class="qr_code_inner">
                         <div class="qr_code">
-                            <img id="js_qr_code_img" class="qr_code_img" src="images/qrcode.jpg">
+                            <img id="js_qr_code_img" class="qr_code_img" src="https://download.pingcap.com/images/qrcode.jpg">
                             <p>微信扫一扫
                                 <br> 微信ID：pingcap2015
                             </p>
@@ -89,9 +89,9 @@
                 <div id="subscribe" class="subscribe">
                     <!-- Begin MailChimp Signup Form -->
                     <style type="text/css" media="screen">
-                    #mc_embed_signup .response {
-                        margin-top: 10px;
-                    }
+                        #mc_embed_signup .response {
+                            margin-top: 10px;
+                        }
                     </style>
                     <div id="mc_embed_signup">
                         <form action="//pingcap.us16.list-manage.com/subscribe/post?u=ab57beb8a88391cf6193c1b48&amp;id=7c67af4f9d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -113,17 +113,17 @@
                     </div>
                     <script type='text/javascript' src='https://download.pingcap.com/js/mc-validate.js'></script>
                     <script type='text/javascript'>
-                    (function($) {
-                        window.fnames = new Array();
-                        window.ftypes = new Array();
-                        fnames[0] = 'EMAIL';
-                        ftypes[0] = 'email';
-                        fnames[1] = 'FNAME';
-                        ftypes[1] = 'text';
-                        fnames[2] = 'LNAME';
-                        ftypes[2] = 'text';
-                    }(jQuery));
-                    var $mcj = jQuery.noConflict(true);
+                        (function($) {
+                            window.fnames = new Array();
+                            window.ftypes = new Array();
+                            fnames[0] = 'EMAIL';
+                            ftypes[0] = 'email';
+                            fnames[1] = 'FNAME';
+                            ftypes[1] = 'text';
+                            fnames[2] = 'LNAME';
+                            ftypes[2] = 'text';
+                        }(jQuery));
+                        var $mcj = jQuery.noConflict(true);
                     </script>
                     <!--End mc_embed_signup-->
                 </div>
