--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,14 +16,11 @@
     <title>Home | PingCAP</title>
     <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/css/base.css" rel="stylesheet">
+    <!-- <link href="/css/base.css" rel="stylesheet"> -->
     {{ block "headcss" . }}{{ end }}
     <style type="text/css" media="screen">
     * .page {
       padding-top: 0!important;
-    }
-    .page > header {
-      padding-bottom: 110px;
     }
     </style>
     {{ partial "head/meta" . }}
