--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -13,10 +13,10 @@
     .item {
         margin: 8px 0;
         .content {
-            h1:target,
-            h2:target {
-                padding-top: 100px;
-            }
+            // h1:target,
+            // h2:target {
+            //     padding-top: 100px;
+            // }
             h1,
             h2,
             h3 {
