--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,7 +1,7 @@
 /* header module */
 
 @nav-height: 60px;
-@blue: #427bbf;
+
 header {
     width: 100%;
     font-family: 'TitilliumWeb';
@@ -19,7 +19,7 @@ header {
         margin-bottom: 0;
         border-radius: 0;
         border:none;
-        background-color: rgba(0,0,0,.85);
+        background-color: @bg_black_with_alpha85;
         .navbar-toggle {
             margin: 13px 8px 0 0;
         }
@@ -38,11 +38,11 @@ header {
             li a {
                 padding: 3px;
                 margin: 12px;
-                color: #fff;
+                color: @white;
             }
             li.sel a,
             li a:hover {
-                color: rgba(255,255,255,.73);
+                color: @bg_white_with_alpha73;
                 -webkit-transition: all .5s ease;
                 -moz-transition: all .5s ease;
                 -ms-transition: all .5s ease;
@@ -55,13 +55,13 @@ header {
                 height: 30px;
                 line-height: 28px;
                 padding: 0 12px;
-                border: 1px solid #fff;
+                border: 1px solid @white;
                 border-radius: 15px;
                 margin: 10px 0 10px 12px;
-                color: #fff;
+                color: @white;
                 &:hover {
-                    background-color: #fff;
-                    color: @blue;
+                    background-color: @white;
+                    color: @theme_blue;
                     -webkit-transition: all .5s ease;
                     -moz-transition: all .5s ease;
                     -ms-transition: all .5s ease;
