--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,7 +1,5 @@
 /* footer module */
-
-@foot-color: #fff;
-@blue: #3a59f0;
+@import "./base.less";
 
 /** add ellipsis in a line **/
 
@@ -22,7 +20,7 @@
     background-color: rgba(0,0,0,.85);
     text-decoration: none;
     font-size: 13px;
-    color: @foot-color;
+    color: @white;
     text-align: center;
     .icons {
         padding-top: 16px;
@@ -33,7 +31,7 @@
             svg {
                 width: 26px;
                 height: 26px;
-                fill: #fff;
+                fill: @white;
             }
         }
     }
@@ -56,14 +54,14 @@
             height: 36px;
             margin-left: -3px;
             border-radius: 0;
-            background-color: @blue;
+            background-color: @theme_blue;
             font-family: 'TitilliumWeb';
             font-weight: bold;
             font-size: .6rem;
-            color: #fff;
+            color: @white;
             &:hover {
-                background-color: #fff;
-                color: @blue;
+                background-color: @white;
+                color: @theme_blue;
                 -webkit-transition: all .5s ease;
                 -moz-transition: all .5s ease;
                 -ms-transition: all .5s ease;
@@ -88,15 +86,15 @@
             text-align: right;
             .btn-lang {
                 padding: 5px 8px;
-                border: 1px solid @foot-color;
+                border: 1px solid @white;
                 border-radius: 0;
                 font-size: .6rem;
-                color: @foot-color;
+                color: @white;
             }
             .btn-lang:hover {
                 border-radius: 2px;
-                background-color: #fff;
-                color: @blue;
+                background-color: @white;
+                color: @theme_blue;
                 -webkit-transition: all .5s ease;
                 -moz-transition: all .5s ease;
                 -ms-transition: all .5s ease;
@@ -119,7 +117,7 @@
                 width: 158px;
                 padding: 12px;
                 border: 1px solid #d9dadc;
-                background-color: #fff;
+                background-color: @white;
                 word-wrap: break-word;
                 word-break: break-all;
                 p {
