--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,6 +1,7 @@
 /* landingpage */
 @import './base.less';
 @import "./header.less";
+@import "./footer.less";
 
 @line_height: 1.7;
 @font_weight_300: 300;
@@ -26,7 +27,7 @@
         line-height: @line_height;
     }
     .container {
-        max-width: @max-width;
+        max-width: @max_width;
     }
     .page {
         background-image: linear-gradient(to top, #080000, #100f2e);
