feat(layout): make tree-nav partial to support global context variable

--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -10,7 +10,7 @@
   <div class="col-md-4 nav nav-tree" id="st-tree">
     <h1 class="title"> 文档 </h1>
     <div class="st_tree">
-      {{ partial "tree-nav.html" .Site.Data.docs_cn_toc }}
+      {{ partial "tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
      </div>
   </div>
 
